--- a/styles/Pages/PostPage.module.css
+++ b/styles/Pages/PostPage.module.css
@@ -11,6 +11,7 @@
     p-6 gap-6 justify-center
     max-w-2xl
     max-md:w-full
+    max-sm:p-2
     ;
 }
 
@@ -60,7 +61,7 @@
 }
 
 .postContentText {
-    @apply w-full text-sm;
+    @apply w-full font-normal;
     overflow: hidden;
     overflow-wrap: break-word;
 }
